--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "apexcharts": "^3.36.3",
     "axios": "^1.2.3",
     "core-js": "^3.8.3",
+    "datatables.net-dt": "^1.13.1",
+    "datatables.net-vue3": "^2.0.0",
     "vue": "^3.2.13",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.0.3",
     "vue-the-mask": "^0.11.1",
     "vue3-apexcharts": "^1.4.1",
