--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "datatables.net-dt": "^1.13.1",
     "datatables.net-vue3": "^2.0.0",
+    "v-money": "^0.8.1",
     "vue": "^3.2.13",
     "vue-moment": "^4.1.0",
     "vue-router": "^4.0.3",
